# SemanticRelease-1-PythonPackage

./: .releaserc.yaml  CHANGELOG.md  Makefile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: main.yaml  release.yaml  test.yaml
semrel_pypkg/: __init__.py  module.py
tests/: test_add.py  test_sub.py
