[tool.poetry]
name = "semanticrelease-1-pythonpackage"
version = "0.1.0"
description = ""
authors = ["nickolasrm <nickolasrochamachado@gmail.com>"]
readme = "README.md"
packages = [{include = "semrel_pypkg"}]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
