[tool.poetry]
name = "semanticrelease-1-pythonpackage"
version = "2.0.1"
description = ""
authors = ["nickolasrm <nickolasrochamachado@gmail.com>"]
readme = "README.md"
packages = [{include = "semrel_pypkg"}]

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
